don't log to console the removed node

--- a/killer.html
+++ b/killer.html
@@ -345,7 +345,7 @@ function update_vote_result(){
 							update_player_status();
 							clear_vote_table();
 
-							console.log($('#vote' + to_kill.index).parent().parent().parent().fadeOut());
+							$('#vote' + to_kill.index).parent().parent().parent().fadeOut();
 						})
 				);
 		}else{
