--- a/killer.html
+++ b/killer.html
@@ -294,8 +294,8 @@ function node_from_vote_result(result){
 function save_history(result){
 	turn++;
 
-	$('#history')
-		.append(
+	$('#comment_row')
+		.before(
 			$('<tr>')
 				.append($('<td>').text(turn))
 				.append($('<td>').append(vote_result_node()))
@@ -434,6 +434,17 @@ function add_nickname(){
 	$('#nickname').val('');
 }
 
+function add_comment(){
+	var comment = $('#comment').val();
+	$('#comment').val('');
+
+	$('#comment_row')
+		.before(
+			$('<tr>')
+				.append($('<td>').attr('colspan', 3).text(comment))
+		)
+}
+
 </script>
 
 <h1 class='text-center'> 杀人游戏 5.0 法官客户端 </h1>
@@ -505,6 +516,7 @@ function add_nickname(){
 						<th> 昵称 </th>
 						<th> 身份 </th>
 						<th> 状态 </th>
+						<th> 操作 </th>
 					</tr>
 				</thead>
 				<tbody id='player_status_table'>
@@ -536,11 +548,19 @@ function add_nickname(){
 				<thead>
 					<tr>
 						<th> 回合数 </th>
-						<th> 投票详情 </th>
+						<th> 详情 </th>
 						<th> 结果 </th>
 					</tr>
 				</thead>
-				<tbody id='history'>
+				<tbody>
+					<tr id='comment_row'>
+						<td colspan="2">
+							<input type='text' class='form-control' placeholder='自定义备注' id='comment' />
+						</td>
+						<td>
+							<button class="btn" onclick="add_comment()"> 添加备注 </button>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
