change "5.0" to "general" in title

--- a/killer.html
+++ b/killer.html
@@ -447,7 +447,7 @@ function add_comment(){
 
 </script>
 
-<h1 class='text-center'> 杀人游戏 5.0 法官客户端 </h1>
+<h1 class='text-center'> 杀人游戏通用法官客户端 </h1>
 
 <div id='start'> 
 
