--- a/killer.html
+++ b/killer.html
@@ -38,6 +38,10 @@
 		color: blue;
 	}
 
+	th{
+		text-align: center;
+	}
+
 </style>
 
 <script type="text/javascript">
@@ -142,6 +146,25 @@ function update_player_status(){
 			}
 
 			$('#alive_roles').append(role_node).append($('<span>').text('x' + role_map[role] + ' '));
+		}
+	}
+
+	$('#role_overview').empty();
+	for(var i=0; i<role_names.length; i++){
+		var role_name = role_names[i];
+		var role_nicknames = [];
+		for(var j=0; j<players.length; j++){
+			if(players[j].role == role_name){
+				role_nicknames.push(players[j].nickname);
+			}
+		}
+		if(role_nicknames.length > 0){
+			$('#role_overview')
+				.append(
+					$('<tr>')
+						.append($('<td>').text(role_name))
+						.append($('<td>').text(role_nicknames.join(' ')))
+				)
 		}
 	}
 }
@@ -534,7 +557,16 @@ function add_comment(){
 			<table class='table table-bordered'>
 				<thead>
 					<tr>
-						<td id='alive_roles' colspan="3">
+						<td id='alive_roles' colspan="4">
+						</td>
+					</tr>
+					<tr>
+						<td colspan="4">
+							<a href='#role_overview_container' data-toggle='collapse' class='btn btn-info'> 身份概览 </a>
+							<div class='collapse' id='role_overview_container' style='padding-top: 20px'>
+							<table class='table table-striped table-bordered table-condensed' id='role_overview'>
+							</table>
+							</div>
 						</td>
 					</tr>
 					<tr>
